# ipo-analyzer

./: .gitignore  CLAUDE.md
backend/: .coverage  .env.example  .gitignore  38_detail_sample.html  38_ipo_1500.html  38_ipo_1600.html  38_ipo_1700.html  38_ipo_1800.html  38_ipo_1900.html  38_ipo_2000.html  38_ipo_2000_text.txt  38_ipo_2234.html  38_ipo_2234_text.txt  ENV_SETUP.md  FINANCIAL_FEATURES_INVESTIGATION.md  FIX_IPO_PRICES.md  INTRADAY_DATA_INVESTIGATION.md  KRX_API_INTEGRATION.md  KRX_API_SETUP.md  OPTIMIZATION_RESULTS.md  README.md  README_INCREMENTAL_UPDATE.md  SPEC.md  TODO.md  add_missing_features.py  analyze_2025_data.py  analyze_2025_data_simple.py  analyze_2025_final.py  analyze_38_html.py  analyze_industry_field.py  analyze_ipo_return_factors.py  analyze_ipo_return_factors_2022_2025.py  analyze_kosdaq_vs_kospi.py  analyze_market_returns.py  analyze_sector_returns.py  backtest_2025_ipos.py  backtest_timesplit.py  check_2025_data.py  clean_intraday_data.py  collect_2020_2021.py  (+51 more)
backend/config/: config.yaml
backend/data/: .last_run.json
backend/models_backup_before_financial/: metrics.json  model_day0_high.pkl
backend/models_backup_current/: model_day0_close.pkl  model_day1_close.pkl
backend/reports/: BACKTEST_AND_2025_ANALYSIS.md  IPO_SUCCESS_FACTORS_REPORT.md  backtest_2024h2_comparison.csv  backtest_2024h2_report.md  backtest_2025_predictions.csv  data_improvement_guide.md  ipo_return_factors_analysis.json  ipo_return_factors_comparison_2024_vs_2025.json  model_training_report.md  predictions_comparison.csv  sector_returns_analysis.csv
backend/src/: __init__.py
backend/tests/: conftest.py  test_data_validator.py  (+6 more)
(+414 files in other folders)
